文档解析修改与缓存实现